# wmi

./: .gitignore  CMakeLists.txt  README
include/wmi/: wmi.hxx
src/: main.cpp  memory.cpp  storage.cpp
